fixing scrollbar hover and interval dialog

--- a/sass/components/_timeperiod.scss
+++ b/sass/components/_timeperiod.scss
@@ -73,13 +73,13 @@
 				font-weight: 300;
 				@include themify($themes) {
 					color: themed('controlText');
-					border-right: 1px solid themed('controlText');
+					border-right: 1px solid themed('borderColor');
 				}
 				&.selected {
 					font-weight: 500;
 					@include themify($themes) {
 						border-right: 2px solid themed('activeColor');
-						background: themed('controlBgActive');
+						background: themed('defaultBgActive');
 						color: themed('activeColor');
 					}
 				}
